custom validation para campos em branco e ajustes necessários